Fixed scrollbar

--- a/frontend/src/styles/cart.css
+++ b/frontend/src/styles/cart.css
@@ -3,6 +3,7 @@
 .cart {
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .bgimg {
