--- a/frontend/src/styles/leftside.css
+++ b/frontend/src/styles/leftside.css
@@ -1,10 +1,13 @@
 @import "./vars.css";
 .leftside {
   width: 30%;
-  height: 100% !important;
+  height: 100vh;
   background: #f1f0f0;
   display: flex;
-  position: relative;
+  position: fixed;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
   top: 0;
   right: 0;
   z-index: 100;
@@ -17,6 +20,7 @@
   width: 100%;
   height: 80px;
   display: flex;
+  position: absolute;
   align-items: center;
   justify-content: flex-end;
   flex-direction: row;
@@ -136,6 +140,7 @@
 }
 .sidebar-msg .img img {
   width: 250px;
+  margin-top: 100px;
 }
 .waring-noti {
   position: fixed;
